...
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/calendarIco"
                android:layout_width="41dp"
                android:layout_height="47dp"
                app:layout_constraintBottom_toBottomOf="@+id/FechaTextInputLayout"
                app:layout_constraintEnd_toStartOf="@+id/FechaTextInputLayout"
                app:layout_constraintTop_toTopOf="@+id/FechaTextInputLayout"
                app:srcCompat="@drawable/calendario" />

            <ImageView
                android:id="@+id/categoriaIco"
                android:layout_width="50dp"
                android:layout_height="55dp"
                app:layout_constraintBottom_toBottomOf="@+id/desplegable"
                app:layout_constraintEnd_toStartOf="@+id/desplegable"
                app:layout_constraintTop_toTopOf="@+id/desplegable"
                app:srcCompat="@drawable/ic_boxeo"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/movilInputLayout"
                android:layout_width="315dp"
                android:layout_height="73dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="250dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/movil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Móvil" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInputLayout"
                android:layout_width="170dp"
                android:layout_height="83dp"
                android:layout_marginStart="178dp"
                android:layout_marginBottom="430dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="73dp"
                    android:hint="Nombre" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/apellido2InputLayout"
                android:layout_width="239dp"
                android:layout_height="68dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="170dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/apellido2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="2º Apellido" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/apellido1InputLayout"
                android:layout_width="237dp"
                android:layout_height="71dp"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="240dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/apellido1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="1º Apellido" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fecha"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:hint="dd/mm/aaaa" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/profesional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="530dp"
                android:text="Profesional"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/eliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="700dp"
                android:layout_marginEnd="200dp"
                android:text="@string/Delete"
                app:icon="@android:drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="700dp"
                android:text="@string/Save"
                app:icon="@android:drawable/ic_menu_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

...
