<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FechaTextInputLayout"
        android:layout_width="287dp"
        android:layout_height="52dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fecha"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:hint="dd/mm/aaaa"
            android:enabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombreInputLayout"
        android:layout_width="260dp"
        android:layout_height="61dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombre" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/desplegable2"
        style="@style/Spinner"
        android:layout_width="223dp"
        android:layout_height="46dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:text="@string/search"
        app:icon="@android:drawable/ic_menu_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="77dp"
        app:layout_constraintBottom_toBottomOf="@+id/nombreInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/nombreInputLayout"
        app:layout_constraintTop_toTopOf="@+id/nombreInputLayout"
        app:srcCompat="@drawable/usuario" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="68dp"
        android:layout_height="93dp"
        app:layout_constraintBottom_toBottomOf="@+id/desplegable2"
        app:layout_constraintEnd_toStartOf="@+id/desplegable2"
        app:layout_constraintTop_toTopOf="@+id/desplegable2"
        app:srcCompat="@drawable/ic_boxeo" />

    <ImageView
        android:id="@+id/calendarIco"
        android:layout_width="41dp"
        android:layout_height="47dp"
        app:layout_constraintBottom_toBottomOf="@+id/FechaTextInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/FechaTextInputLayout"
        app:layout_constraintTop_toTopOf="@+id/FechaTextInputLayout"
        app:srcCompat="@drawable/calendario" />

    <TextView
        android:id="@+id/categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="Categoría:"
        android:textColor="#040303"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/desplegable2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" /><![CDATA[

    />
]]>
</androidx.constraintlayout.widget.ConstraintLayout>