...
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_list">List</string>
    <string name="title_activity_form">Form</string>
    <string name="search">Search</string>
    <string name="action_ordenar">Order</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_search">Search</string>
    <string name="Save">Save</string>
...
    <string name="name_error">Enter the first letter in uppercase</string>
    <string name="telf_error">The phone number must be 9 digits</string>
    <string name="num_error">Please enter numbers and no other characters</string>
    <string name="date_error">Please enter a valid date</string>
    <string name="deleteQuestion">Are you sure you want to eliminate the boxer?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">confirm</string>
    <string name="new1">New</string>
    <string name="voidString">Please enter a text string</string>
    <string name="choose_picture">Select an image</string>
    <string name="check_normal_permission">Check normal permission</string>
    <string name="check_dangerous_permission">Check dangerous permission</string>
    <string name="write_permission_denied">You don\'t have writing permission</string>
...
